1.18 port, Custom `PackType`s do not work at this point in time